<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/hello" />
	<Button android:id="@+id/strength_button" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center_vertical"
		android:text="@string/strength_button_text" />
	<Button android:id="@+id/genpw_button" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center_vertical"
		android:text="@string/genpw_button_text" />
    <Button android:id="@+id/add_account_button" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center_vertical"
        android:text="@string/add_account_button_text" />
</LinearLayout>
